--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -3449,6 +3449,7 @@ scrollbar {
   scrollbar .slider {
     margin: 3px;
     border-radius: 100px;
+    border: 0 none transparent;
     background-color: rgba(236, 239, 241, 0.5); }
     .scrollbar slider:hover,
     .scrollbar .slider:hover,
@@ -3500,12 +3501,12 @@ scrollbar {
     margin-top: 5px; }
   .scrollbar.overlay-indicator:not(.dragging):not(.hovering),
   scrollbar.overlay-indicator:not(.dragging):not(.hovering) {
-    border-style: none;
+    border-color: transparent;
     background-color: transparent; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider,
     scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
-      margin: 1px;
-      border: 2px solid transparent; }
+      margin: 3px;
+      border: 0 none transparent; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering) button,
     scrollbar.overlay-indicator:not(.dragging):not(.hovering) button {
       min-width: 6px;
@@ -3518,8 +3519,8 @@ scrollbar {
     scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical slider {
       min-width: 7px;
       min-height: 30px;
-      margin-top: 2px;
-      margin-bottom: 2px; }
+      margin-top: 3px;
+      margin-bottom: 3px; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical button,
     scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical button {
       margin: 1px 2px;
@@ -3528,8 +3529,8 @@ scrollbar {
     scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider {
       min-width: 30px;
       min-height: 7px;
-      margin-left: 2px;
-      margin-right: 2px; }
+      margin-left: 3px;
+      margin-right: 3px; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal button,
     scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal button {
       margin: 2px 1px;
